# numbers11

./: .gitignore  CLAUDE.md  Claude.md  README.md
.cursor/rules/: Claude-story.mdc  agent-behavior.mdc
Deployments/: Install-Script-Template.ps1
Deployments/DotNetRuntime/: Detection.ps1  Install.ps1  PACKAGE.md  Package-IntuneApp.ps1  README.md  Uninstall.ps1
MACOS SCRIPTS/: snake.sh
Scripts/: CLAUDE.md  Fix-SAPLandscape.ps1  scriptkiddy  test_scriptkiddy.sh
Templates/: Audit-Script-Template.ps1  Detection-Script-Template.ps1  README.md  Requirements-Script-Template.ps1  Uninstall-Script-Template.ps1
WIN11 INSTALL SCRIPT/: Build-FastWin11Installer.ps1  Create-BootableUSB.ps1  Quick-Deploy.ps1  README.md  autounattend.xml
bash-dev-env/: .editorconfig  .gitignore  .shellcheckrc  Makefile  README.md
bash-dev-env/examples/: hello.sh
bash-dev-env/lib/: common.sh
bash-dev-env/templates/: script-template.sh
bash-dev-env/tests/: example_test.bats
brew-manager/: .gitignore  CLAUDE-v0.2.0.md  CLAUDE.md  Makefile  Package.swift  README.md
brew-manager/Resources/: AppIcon.icns  Info.plist
brew-manager/Scripts/: generate-icon.swift  package.sh
dashboard/: .gitignore  README.md  docker-compose.yml
dashboard/backend/: main.py  status_checker.py
dashboard/frontend/: Dockerfile  index.html  nginx.conf  (+2 more)
excel-perf-toolkit/: CLAUDE.md  KB_Excel_Workbook_Performance.md  Scan-ExcelShares.ps1  analyze_workbook.py  generate_test_workbook.py  test_analyze_workbook.py
mcp-servers/: .dockerignore  .env.example  docker-compose.mcp.yml
mcp-servers/_shared/: pyproject.toml
mcp-servers/_shared/mdm_shared/: __init__.py  cache.py
mcp-servers/_shared/mdm_shared/auth/: __init__.py  azure.py
mcp-servers/_shared/mdm_shared/clients/: __init__.py  intune.py  kandji.py
mcp-servers/_shared/mdm_shared/models/: __init__.py  intune.py  kandji.py
mcp-servers/_shared/tests/: conftest.py  test_azure_auth.py  test_cache.py  test_intune_client.py  test_kandji_client.py
mcp-servers/_shared/tests/fixtures/: intune_device_detail.json  intune_devices.json  kandji_device_detail.json  kandji_devices.json
mcp-servers/mcp-intune/: .env.example  Dockerfile  README.md  pyproject.toml
mcp-servers/mcp-intune/mcp_intune/: __init__.py  __main__.py  config.py  server.py
mcp-servers/mcp-intune/mcp_intune/resources/: __init__.py  status.py
mcp-servers/mcp-intune/mcp_intune/tools/: __init__.py  actions.py  apps.py  compliance.py  configurations.py  devices.py
mcp-servers/mcp-kandji/: .env.example  Dockerfile  README.md  pyproject.toml
mcp-servers/mcp-kandji/mcp_kandji/: __init__.py  __main__.py  config.py  server.py
mcp-servers/mcp-kandji/mcp_kandji/resources/: __init__.py  status.py
mcp-servers/mcp-kandji/mcp_kandji/tools/: __init__.py  actions.py  apps.py  blueprints.py  devices.py
mcp-servers/mcp-mdm-hub/: .env.example  Dockerfile  README.md  pyproject.toml
mcp-servers/mcp-mdm-hub/mcp_mdm_hub/: __init__.py  __main__.py  aggregator.py  config.py  normalizer.py  server.py
mcp-servers/mcp-mdm-hub/mcp_mdm_hub/models/: __init__.py  unified.py
mcp-servers/mcp-mdm-hub/mcp_mdm_hub/prompts/: __init__.py  compliance_review.py  device_audit.py
mcp-servers/mcp-mdm-hub/mcp_mdm_hub/resources/: __init__.py  status.py
mcp-servers/mcp-mdm-hub/mcp_mdm_hub/tools/: __init__.py  actions.py  devices.py  fleet.py
mcp-servers/mcp-mdm-hub/tests/: test_normalizer.py
zen-dev-setup/: .editorconfig  .gitignore  Brewfile  CLAUDE.md  README.md  install.sh
(+70 files in other folders)
