[project]
name = "mcp-intune"
version = "0.1.0"
description = "Microsoft Intune MCP server — query devices, compliance, apps, and execute remote actions"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25,<2",
    "mdm-shared",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_intune"]

[tool.uv.sources]
mdm-shared = { path = "../_shared" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
