[project]
name = "mcp-kandji"
version = "0.1.0"
description = "Kandji MDM MCP server — query devices, blueprints, apps, and execute device actions"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25,<2",
    "mdm-shared",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
source = "https://github.com/jack-morton/GitHub-1/tree/main/mcp-servers/mcp-kandji"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_kandji"]

[tool.uv.sources]
mdm-shared = { path = "../_shared" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
